@@ -1,3 +1,14 @@
+2020-07-06  Chris Fleizach  <cfleizach@apple.com>
+
+        AX: Add ability for AX objects to output html in debug
+        https://bugs.webkit.org/show_bug.cgi?id=214020
+
+        Reviewed by Darin Adler.
+
+        * accessibility/mac/WebAccessibilityObjectWrapperBase.mm:
+        (-[WebAccessibilityObjectWrapperBase innerHTML]):
+        (-[WebAccessibilityObjectWrapperBase outerHTML]):
+
 2020-07-06  Brady Eidson  <beidson@apple.com>
 
         Get rid of concept of "initial connected gamepads"
